kubernetes/apps/services/sparkyfitness/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sparkyfitness
  namespace: services
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:weight-lifter
    hajimari.io/group: services
    hajimari.io/appName: SparkyFitness
spec:
  hostnames:
    - "kenkou.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-exernal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sparkyfitness-frontend
          port: 80
